manager team list api is created and modified the kra kpi approval api for manager